crates/vite_task_bin/tests/test_snapshots/snapshots/test_snapshots__query - synthetic-in-subpackage@synthetic-in-subpackage.snap
---
source: crates/vite_task_bin/tests/test_snapshots/main.rs
expression: "&plan_json"
input_file: crates/vite_task_bin/tests/test_snapshots/fixtures/synthetic-in-subpackage
---
{
  "root_node": {
    "Expanded": [
      {
        "key": [
          "<workspace>/",
          "lint"
        ],
        "node": {
          "task_display": {
            "package_name": "",
            "task_name": "lint",
            "package_path": "<workspace>/"
          },
          "items": [
            {
              "execution_item_display": {
                "task_display": {
                  "package_name": "",
                  "task_name": "lint",
                  "package_path": "<workspace>/"
                },
                "command": "vite run a#lint",
                "and_item_index": null,
                "cwd": "<workspace>/"
              },
              "kind": {
                "Expanded": [
                  {
                    "key": [
                      "<workspace>/packages/a",
                      "lint"
                    ],
                    "node": {
                      "task_display": {
                        "package_name": "a",
                        "task_name": "lint",
                        "package_path": "<workspace>/packages/a"
                      },
                      "items": [
                        {
                          "execution_item_display": {
                            "task_display": {
                              "package_name": "a",
                              "task_name": "lint",
                              "package_path": "<workspace>/packages/a"
                            },
                            "command": "vite lint",
                            "and_item_index": null,
                            "cwd": "<workspace>/packages/a"
                          },
                          "kind": {
                            "Leaf": {
                              "Spawn": {
                                "cache_metadata": {
                                  "spawn_fingerprint": {
                                    "cwd": "packages/a",
                                    "program_fingerprint": {
                                      "OutsideWorkspace": {
                                        "program_name": "oxlint"
                                      }
                                    },
                                    "args": [],
                                    "env_fingerprints": {
                                      "fingerprinted_envs": {},
                                      "pass_through_env_config": [
                                        "<default pass-through envs>"
                                      ]
                                    },
                                    "fingerprint_ignores": null
                                  },
                                  "execution_cache_key": {
                                    "kind": {
                                      "UserTask": {
                                        "task_name": "lint",
                                        "and_item_index": 0,
                                        "extra_args": []
                                      }
                                    },
                                    "origin_path": "packages/a"
                                  }
                                },
                                "spawn_command": {
                                  "program_path": "<tools>/node_modules/.bin/oxlint",
                                  "args": [],
                                  "all_envs": {
                                    "NO_COLOR": "1",
                                    "PATH": "<workspace>/packages/a/node_modules/.bin:<workspace>/node_modules/.bin:<tools>/node_modules/.bin"
                                  },
                                  "cwd": "<workspace>/packages/a"
                                }
                              }
                            }
                          }
                        }
                      ]
                    },
                    "neighbors": []
                  }
                ]
              }
            }
          ]
        },
        "neighbors": []
      }
    ]
  }
}
