crates/vite_task_bin/tests/test_snapshots/snapshots/test_snapshots__single task failure returns task exit code@exit-codes.snap
---
source: crates/vite_task_bin/tests/test_snapshots/main.rs
expression: e2e_outputs
input_file: crates/vite_task_bin/tests/test_snapshots/fixtures/exit-codes
---
[42]> vite run pkg-a#fail
~/packages/pkg-a$ node -e "process.exit(42)"


━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Vite+ Task Runner • Execution Summary
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Statistics:   1 tasks • 0 cache hits • 1 cache misses • 1 failed 
Performance:  0% cache hit rate

Task Details:
────────────────────────────────────────────────
  [1] pkg-a#fail: ~/packages/pkg-a$ node -e "process.exit(42)" ✗ (exit code: 42)
      → Cache miss: no previous cache entry found
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.local/share/mise/installs/node/25.2.1/bin",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.local/share/mise/installs/node/25.2.1/bin",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.local/share/mise/installs/node/25.2.1/bin",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.local/share/mise/installs/node/25.2.1/bin/Info.plist",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Library/Preferences/Logging/com.apple.diagnosticd.filter.plist",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.CFUserTextEncoding",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.CFUserTextEncoding",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/System/Library/OpenSSL//openssl.cnf",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/System/Library/OpenSSL/openssl.cnf",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "<workspace>/packages/pkg-a",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "<workspace>/packages/pkg-a",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.local/share/mise/installs/node/25.2.1/bin/node",
}
[crates/vite_task/src/session/execute/spawn.rs:177:9] &access = PathAccess {
    mode: AccessMode(
        READ,
    ),
    path: "/Users/patr0nus/.local/share/mise/installs/node/25.2.1/bin/node",
}
